# svg-gen

./: .gitignore  merge_and_retrain.py  pyproject.toml
models/filtered-r16-3epoch/: adapter_config.json
models/r16-3epoch/: adapter_config.json  tokenizer_config.json
planning/: journal.md  tokenizer-analysis.md
references/: SVG_and_LoRA_Tutorial.ipynb  starter-notebook.ipynb
report/: main.tex  references.bib
scripts/: auto_inference.sh  code_gen_inference.py  combine_best_of_n.py  create_codegen_data.py  create_val_split.py  curate_expanded_data.py  generate_figures.py  orchestrate_ablations.py  overnight_inference_queue.sh  postprocess.py  preprocessing_audit.py  resume_inference.py  run_ablation.py  run_ablation_refined.py  run_all_ablations.sh  run_inference.py  run_inference_full_model.py  run_inference_merged.py  run_inference_temp.py  run_sysprompt_ablation.py  svg_builder.py  temperature_sweep.py  test_code_gen.py  thor_inference_sweep.py  upload_weights.py
src/svg_gen/: __init__.py  config.py  data.py  debug_generate.py  decode_sweep.py  download_results.py  experiment.py  inference.py  kepler_inference.py  kepler_train.py  modal_app.py  render.py  sample_generate.py  score.py  submit.py  thor_train.py  thor_train_codegen.py  train.py  upload_data.py
stubs/bitsandbytes/: __init__.pyi
stubs/datasets/: __init__.pyi  arrow_dataset.pyi
stubs/peft/: __init__.pyi  config.pyi  mapping.pyi  peft_model.pyi
stubs/peft/tuners/lora/: config.pyi
stubs/peft/utils/: peft_types.pyi
stubs/trl/: __init__.pyi
stubs/trl/trainer/: sft_trainer.pyi
